Fixed premature collapsing of taskbar name

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
 }
 
 .taskbar .name {
-    width: 20vw;
     position: absolute;
     top: 2vh;
     left: 5vw;
